--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/school_work_db
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.mvc.view.prefix="/WEB-INF/views/"
+spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
